crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.useMemo-non-literal-depslist/error.txt
Found 1 error:

Error: Expected the dependency list for useMemo to be an array literal

Expected the dependency list for useMemo to be an array literal.

error.useMemo-non-literal-depslist.ts:10:4
   8 |       return text.toUpperCase();
   9 |     },
> 10 |     hasDeps ? null : [text], // should be DCE'd
     |     ^^^^^^^^^^^^^^^^^^^^^^^ Expected the dependency list for useMemo to be an array literal
  11 |   );
  12 |   return resolvedText;
  13 | }
